...
          endIconOnPress={() => setShowPassword((oldState) => !oldState)}
          placeholder="********"
          autoCapitalize="none"
        />

        <Button
          title="Começar agora"
          variant="primary"
          onPress={() => handleSignUp(email, password, name)}
        />

        <Text style={styles.registerTermsNotice}>
          Ao criar uma conta, você concorda com nossos{" "}
...
